corrects alignment

--- a/css/hola.css
+++ b/css/hola.css
@@ -177,10 +177,6 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-h2 {
-  font-family: 'GoogleSansRegular', sans-serif;
-  letter-spacing: 1.4px; 
-}
 
 #header .container-fluid .icon{
   background: transparent;
@@ -225,9 +221,13 @@ h2 {
   font-size: 15px;
 }
 #contact .container li {
-  margin-bottom: 6px;
+  margin-bottom: 0px;
 }
 
+#case-study .container li {
+  margin-bottom: 13px;
+  line-height: 26px;
+}
 #contact .contact-info {
   margin-bottom: 20px;
   text-align: center;
@@ -505,9 +505,7 @@ font-family: 'Raleway' sans-serif;
 
 .cbp-l-project-details-list {
   font-size: 14px;
-  line-height: 28px;
-  letter-spacing: 0.08em;
-  text-align: justify;
+  line-height: 26px;
   font-weight: 400;
 }
 
@@ -527,8 +525,10 @@ h3 {
 }
 
 h4 {
-  font-family: 'GoogleSansRegular',sans-serif;
-  letter-spacing: 1.4px;
+  margin-bottom: 6px;
+  font-family: 'Montserrat',sans-serif;
+  color: #4D4B4D;
+  margin-top: 30px;
 }
 
 /*--------------------------------------------------------------
@@ -547,18 +547,18 @@ h4 {
 
 #case-study .container img{
   margin-top: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .title {
 	font-size: 22px;
   font-weight: bold;
-  font-family: 'GoogleSansRegular', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 	position: relative;
 	padding: 0px 0px 20px 0px;
 	margin: 0px 0px 23px 0px;
   line-height: 20px;
-  letter-spacing: 1.2px;
+  color: ##4D4B4D;
 }
 .title:after {
 	position: absolute;
@@ -582,9 +582,9 @@ h4 {
 # Project Title Section
 --------------------------------------------------------------*/
 .barc_bg {
-	background: url(../img/intro-carousel/1.png) no-repeat center center;
+	background: #fff;
   width: 100%;
-  height: 250px;
+  height: 220px;
 	margin: 65px 0px 0px;
 	position: relative;
 	z-index: 1;
@@ -593,20 +593,7 @@ h4 {
 	align-items:center;
 }
 
-.barc_bg:before {
-	background: #175670;
-  opacity: 0.2;
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	z-index:-1;
-}
-
 .barc_bg hr {
-
   margin: 35px 30px 0px 15px;
 }
 
@@ -663,7 +650,8 @@ h4 {
   #call-to-action {
     height: 100px;
     text-align: center;
-    padding-top: 45px;
+    padding-top: 55px;
+    padding-left: 30px;
   }
 
  
@@ -671,12 +659,12 @@ h4 {
     border: 1px solid #000;
     color: #000;
     background: transparent;
-    font-family: 'GoogleSansRegular', sans-serif;
+    font: 500 14px/34px 'Montserrat', sans-serif;
     text-align: center;
     height: 40px;
     line-height: 37px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: inline-block;
     margin: 0px 30px 0px -6px
     
@@ -685,12 +673,12 @@ h4 {
     border: 1px solid #000;
     color: #FFF;
     background: #000;
-    font-family: 'GoogleSansRegular', sans-serif;
+    font: 500 14px/34px 'Montserrat', sans-serif;
     text-align: center;
     height: 40px;
     line-height: 37px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     display: inline-block;
     margin: 0px 30px 0px -6px
     
@@ -729,12 +717,35 @@ h4 {
 
   @media only screen and (max-width: 414px) {
 
+    #barc_bg .container .project-info {
+      text-align: center;
+    }
+
+    .barc_bg {
+      background: #fff;
+      height: 200px;
+      margin-top: 60px;
+      
+      text-align: center;
+      position: relative;
+      z-index: 1;
+      align-items:center;
+    }
+    
+.barc_bg hr {
+    margin: 3px 50px 0px 15px;
+}
+    
     .img-logo {
       display:none;
     }
 
-  #contact .container{
-    margin-left: 0px;
+     #contact .container{
+      margin-left: 0px;
+}
+
+#call-to-action .container {
+  align-items: center;
 }
 #contact {
   padding-left: 10px;
@@ -772,10 +783,8 @@ h4 {
 }
 
 .cbp-l-project-desc-text {
-  font-size: 14px;
+  font-size: 13px;
   line-height: 28px;
-  letter-spacing: 0.05em;
-  text-align: justify;
   font-weight: 500;
 }
 
